crates/sdk-core/tests/workflows_trybuild/async_query_fail.stderr
error: #[query] methods must not be async (queries are synchronous)
  --> tests/workflows_trybuild/async_query_fail.rs:16:9
   |
16 |     pub async fn get_value(&self, _ctx: &WorkflowContextView) -> u32 {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `WorkflowContextView` and `WorkflowContext`
 --> tests/workflows_trybuild/async_query_fail.rs:2:22
  |
2 | use temporalio_sdk::{WorkflowContext, WorkflowContextView};
  |                      ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
